fixed some contrast issues

--- a/final/styles/medium.css
+++ b/final/styles/medium.css
@@ -19,6 +19,18 @@
         top: 15px;
         left: 40%;
     }
+    .banner {
+        position: relative;
+    }
+    .banner h1 {
+        display: block;
+        position: absolute;
+        font-size: 60px;
+        color: white;
+        bottom: 40%;
+        left: 32%;
+        text-shadow: 2px 2px 2px black;
+    }
     .weather {
         display: grid;
     }
