--- a/final/styles/small.css
+++ b/final/styles/small.css
@@ -114,17 +114,10 @@ header #message {
     width: 100%;
     height: auto;
 }
-.banner {
-    position: relative;
-}
+
 
 .banner h1 {
-    position: absolute;
-    font-size: normal;
-    color: white;
-    bottom: 60%;
-    left: 30%;
-    text-shadow: 2px 2px 2px black;
+    display: none;
 }
 main {
     display: block;
